tests/ui/wf/wf-in-fn-where-clause.stderr
error[E0277]: the trait bound `U: Copy` is not satisfied
  --> $DIR/wf-in-fn-where-clause.rs:10:14
   |
LL |     where T: MustBeCopy<U>
   |              ^^^^^^^^^^^^^ the trait `Copy` is not implemented for `U`
   |
note: required by a bound in `MustBeCopy`
  --> $DIR/wf-in-fn-where-clause.rs:6:20
   |
LL | trait MustBeCopy<T:Copy> {
   |                    ^^^^ required by this bound in `MustBeCopy`
help: consider further restricting type parameter `U` with trait `Copy`
   |
LL |     where T: MustBeCopy<U>, U: std::marker::Copy
   |                           ++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
